--- a/Components/SupplierDialog/SupplierDialogCard.axaml
+++ b/Components/SupplierDialog/SupplierDialogCard.axaml
@@ -107,7 +107,7 @@
                             </StackPanel>
                         </StackPanel>
                     </shadui:Card>
-                    <shadui:Card Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Top" Height="470" HasShadow="True">
+                    <shadui:Card Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Top" Height="530" HasShadow="True">
                         <StackPanel Orientation="Vertical" Margin="0,0,30,0">
                             <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
                                 <Svg
@@ -163,6 +163,17 @@
                                                                 SelectedItem="{CompiledBinding SelectedCategory, Mode=TwoWay}"
                                                                 Width="200"
                                                                 Margin="0,-5,0,0"/>
+                                                        </StackPanel>
+                                                        <StackPanel Orientation="Vertical" Spacing="5" Margin="0,10,0,0" HorizontalAlignment="Left">
+                                                            <TextBlock
+                                                                Text="Warrant Expiry"
+                                                                FontSize="14"
+                                                                FontWeight="Medium"/>
+                                                            <DatePicker
+                                                                Height="40"
+                                                                HorizontalAlignment="Left"
+                                                                Width="350"
+                                                                SelectedDate="{CompiledBinding Expiration, Mode=TwoWay}" />
                                                         </StackPanel>
                                                     </StackPanel>
                                                 </Grid>
